package java_design_patterns.Q_command.stock;

public interface Order {
    void execute();
}
